# perch

./: .gitignore  .vscodeignore  BUILD.gn  CONTRIBUTING.md  LICENSE  README.md  kinglet-lsp  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml
client/: extension.ts
scripts/: generate-icons.py  setup-deps.ps1  setup-deps.sh  stage-vsix.js
server/: BUILD.gn  main.cc
server/src/lsp/: analysis.cc  analysis.h  completion_resolver.cc  completion_resolver.h  completion_token.cc  completion_token.h  document_store.cc  document_store.h  formatting.cc  formatting.h  json.h  log.h  nest_analysis.cc  nest_analysis.h  server.cc  server.h  transport.cc  transport.h  uri_util.h
src/: extension.ts
syntaxes/: kinglet-nest.tmLanguage.json  kinglet.tmLanguage.json
tests/lsp/: lsp_completion_stress_test.py  lsp_nest_diagnostic_test.py
tests/lsp/cases/nest_diag_clean/: expected.json  kinglet.nest
tests/lsp/cases/nest_diag_clean/lib/: b.kl
tests/lsp/cases/nest_diag_dirty/: expected.json  kinglet.nest
