static_library("lsp") {
  sources = [
    "src/lsp/analysis.cc",
    "src/lsp/analysis.h",
    "src/lsp/completion_resolver.cc",
    "src/lsp/completion_resolver.h",
    "src/lsp/completion_token.cc",
    "src/lsp/completion_token.h",
    "src/lsp/document_store.cc",
    "src/lsp/document_store.h",
    "src/lsp/formatting.cc",
    "src/lsp/formatting.h",
    "src/lsp/json.cc",
    "src/lsp/json.h",
    "src/lsp/log.h",
    "src/lsp/nest_analysis.cc",
    "src/lsp/nest_analysis.h",
    "src/lsp/nest_completion.cc",
    "src/lsp/nest_completion.h",
    "src/lsp/protocol.h",
    "src/lsp/server.cc",
    "src/lsp/server.h",
    "src/lsp/transport.cc",
    "src/lsp/transport.h",
    "src/lsp/uri_util.h",
  ]

  deps = [
    "//compiler/frontend/checker",
    "//compiler/frontend/lexer",
    "//compiler/frontend/module",
    "//compiler/frontend/parser",
    "//compiler/driver/preen",
  ]

  include_dirs = [
    "//server/src",
    "//compiler",
  ]
}

executable("formatting_test") {
  testonly = true
  sources = [ "src/lsp/formatting_test.cc" ]

  deps = [ ":lsp" ]

  include_dirs = [
    "//server/src",
    "//compiler",
  ]
}
